# mypy

./: .env  .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: .env  settings.py
article/migrations/: 0001_initial.py
testdjango/: settings.py  urls.py
